--- a/static/css/index.css
+++ b/static/css/index.css
@@ -2,3 +2,9 @@
     width: 4rem;
     height: 4rem;
 }
+
+.welcome {
+    background: url('/contacts-app/static/img/background.jpg');
+    background-position: center center;
+    background-size: cover;
+}
